# fast-next-starter

./: .gitignore  package.json  vercel.json
api/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
api/config/: settings.py
frontend/: package-lock.json
frontend/src/config/: api.ts
