[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.1",
    "fastapi==0.109.2",
    "pydantic==2.6.1",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.27",
    "uvicorn[standard]==0.27.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.1",
    "httpx==0.26.0",
]
